# l2bin-wrapper

./: CMakeLists.txt  LICENSE  README.md  customization.h.in  main.cpp  tokei.toml  version.h.in
.gihub/workflows/: release.yml
.github/workflows/: release.yml
res/: version.rc
src/: args.cpp  args.h  paths.cpp  paths.h
